--- a/TradeCategory.Tests/TradeCategory.Tests.csproj
+++ b/TradeCategory.Tests/TradeCategory.Tests.csproj
@@ -10,10 +10,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TradeCategory.Application\TradeCategory.Application.csproj" />
+    <ProjectReference Include="..\TradeCategory.Domain\TradeCategory.Domain.csproj" />
+    <ProjectReference Include="..\TradeCategory.Infrastructure\TradeCategory.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
